menu fix and header alignment

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -163,7 +163,7 @@
 						display: block;
 						height: inherit;
 						line-height: inherit;
-						margin: 0 0 0 2em;
+						margin: 0 0 0 1em;
 						padding: 0;
 					}
 				}
